# haskell-whisper

./: ChangeLog.md  cabal.project  whisper.cabal
app/: Main.hs
src/Data/: Whisper.hs
